added some models, User and Quiz Controller addded